<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".controller.MainActivity"
    tools:showIn="@layout/activity_main">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/main_from_layout"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:paddingStart="16dp"
                        android:paddingTop="16dp"
                        android:paddingBottom="16dp">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/main_from_flag"
                            android:layout_width="40dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="24dp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <androidx.appcompat.widget.AppCompatTextView
                                style="@style/Regular14"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/main_from" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:gravity="center_vertical"
                                android:layout_height="wrap_content">
                                <androidx.appcompat.widget.AppCompatTextView
                                    android:id="@+id/main_from_currecy"
                                    style="@style/Bold18"
                                    android:layout_marginEnd="12dp"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="BRL" />

                                <androidx.appcompat.widget.AppCompatImageView
                                    android:layout_width="12dp"
                                    android:layout_height="12dp"
                                    app:srcCompat="@drawable/ic_drop_down_arrow"/>
                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/main_from_symbol"
                        style="@style/Bold18"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="R$" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/main_from_value"
                        style="@style/Bold18"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:inputType="number"
                        android:text="0,00" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/light_gray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/main_to_layout"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:paddingStart="16dp"
                        android:paddingTop="16dp"
                        android:paddingBottom="16dp">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/main_to_flag"
                            android:layout_width="40dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="24dp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <androidx.appcompat.widget.AppCompatTextView
                                style="@style/Regular14"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/main_to" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:gravity="center_vertical"
                                android:layout_height="wrap_content">
                                <androidx.appcompat.widget.AppCompatTextView
                                    android:id="@+id/main_to_currecy"
                                    style="@style/Bold18"
                                    android:layout_marginEnd="12dp"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="BRL" />

                                <androidx.appcompat.widget.AppCompatImageView
                                    android:layout_width="12dp"
                                    android:layout_height="12dp"
                                    app:srcCompat="@drawable/ic_drop_down_arrow"/>
                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/main_to_symbol"
                        style="@style/Bold18"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="R$" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/main_to_value"
                        style="@style/Bold18"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginEnd="20dp"
                        android:text="0,00" />
                </LinearLayout>
            </LinearLayout>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/main_change_button"
                android:clickable="true"
                android:focusable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/fab_margin"
                app:srcCompat="@drawable/ic_change"
                app:elevation="16dp"
                android:layout_centerInParent="true"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/main_recycler_currencies"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp" />

</LinearLayout>