<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/bottom_sheet_currency_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>